# twstock_analysis

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  et --hard HEAD@{1}  package-lock.json  package.json  plan.md
.sqlx/: query-33ad764aecc97055d114db10e424183bad44f7f91d7e04f86949b389a83f7b43.json  query-5eece56c8cf476e94409b18edd3df9493ff66ea24ed54b281a795715cbbc6c77.json  query-5ffae3633f46369b794453d9c2d012eda3e5ae2162d86a31dc9d65ba8b7669cd.json  query-c255f4c9d0522372ca86bdd4473083c501849e6231d38dd9236786fcd960c826.json  query-d3a1257c73c24a753d5a7f8f813e3d31722bca3b2250422fb182a733365e3c4a.json  query-d98e8259a13a1531c79f5d7deeb8571c4c94c50b8c4c5d106c36c42bc1f86d54.json
ai_stock_analysis_service/: Dockerfile  mypy.ini  requirements.txt
ai_stock_analysis_service/ai_service/: Create__init__.py  README.md  __init__.py  constants.py  main.py  serialization.py
ai_stock_analysis_service/ai_service/backtest/: engine.py
ai_stock_analysis_service/ai_service/models/: model_registry.py
ai_stock_analysis_service/ai_service/predict/: features.py  handler.py  validator.py
ai_stock_analysis_service/tests/: test_ai_service.py
docs/: API_CONTRACT.md  ARCH_DESIGN.md  COLLAB_FRAMEWORK.md  DAILY_CHECKLIST.md  FRONTEND_SPEC.md  LABEL_DEFINITION_SPEC.md  MANUAL_SYNC_SPEC.md  PROJECT_OVERVIEW.md  openapi.yaml
docs/api/: openapi.yaml
frontend/: .env.local.example  README.md  env.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/hooks/: index.ts  useFocusPolling.ts
frontend/lib/: api-client.ts  error-handler.ts  utils.ts
frontend/providers/: QueryClientProvider.tsx
frontend/store/: useAppStore.ts
frontend/types/: api.generated.ts  app.ts
migrations/: 000_init_schema.sql  001_add_candle_audit_fields.sql  001_rollback.sql  002_add_symbols_finmind_earliest.sql  002_rollback.sql  003_create_sync_log.sql  003_rollback.sql  004_create_institutional_investors.sql  004_rollback.sql  README.md  init_schema.sql  run_migrations.sh
src/: app_state.rs  constants.rs  main.rs
src/ai_client/: client.rs  mod.rs  serialization.rs
src/api/: mod.rs  router_additions.rs
src/core/: mod.rs
src/data/: candle_query.rs  dataset_sync.rs  db.rs  db_tests.rs  fetch.rs  fetch_rate_limiter.rs  implementations.rs  manual_sync.rs  mocks.rs  mod.rs  models.rs  symbol_sync.rs  traits.rs
src/domain/: mod.rs
src/models/: candle.rs  enums.rs  indicators.rs  mod.rs  symbol.rs
src/services/: admin_sync.rs  backtest.rs  candle.rs  mod.rs  scheduler.rs  signal.rs  sync_state.rs  sync_types.rs
src/types/: api.generated.ts
(+149 files in other folders)
